V1.0.0.1/README.md
PHPCMD 命令行插件
===============================================
小黄牛
-----------------------------------------------
### 1731223728@qq.com 
<br/>

+ 命令行工具当前版本 - V1.0.0.1<br/>
+ 作者 - 小黄牛<br/>
+ 邮箱 - 1731223728@qq.com<br/>                                                                                                                    

+ 快捷键：ESC 清空当前界面<br/>
+ 命令行介绍如下：<br/>
+ 本工具是一个可嵌入在后台管理系统中的便捷式开发工具，适用于中小型项目，研发理念为，方便程序员的日常项目维护，正常状态下的程序调试；<br/>
+ 本工具可用于商业用途，但不可随意更改作者著作权。<br/>

+ 命令行使用说明：<br/>
+ 初次使用命令行，系统提供了一个初始用户，账号密码：admin<br/>
+ 使用命令行之前，需要先登录工具，进入页面后敲下回车，即可快捷弹出登录指令<br/>
+ 每个命令行的提交都是使用【回车键】<br/>
+ 命令行每个参数之间，都是用一个空格进行分割，例如登录指令：

``` 
user login|name 账号 密码
```

<br/>


## 命令行的组成方式：
<br/>

```
主类 子类 参数1 参数2 参数N 
````
<br/>

### 1、工具账号操作指令：
<br/>

+ 注册账号 : 
``` 
user reg 账号[必填] 密码[必填]
```

<br/>

+ 删除账号 : 
``` 
user del 账号[必填]
```
<br/>

+ 修改账号 : 
``` 
user upd 账号[必填] 密码[必填]
```
<br/>

+ 退出工具 : 
``` 
user exit
```
<br/>

+ 登录工具 : 
``` 
user login|name 账号[必填] 密码[必填]
```

<br/>

+ (命令行工具的用户依赖文件作为存储方式，存放地址为：cmd/config/user/)<br/>
### 2、工具配置操作指令：
<br/>

+ 新增配置 : 
``` 
conf add 键名[必填] 值[必填]
```

<br/>

+ 修改配置 : 
``` 
conf upd 键名[必填] 值[必填]
```
<br/>

+ 删除配置 : 
``` 
conf del 键名[必填]
```
<br/>

+ 查看单个配置 : 
``` 
conf sel 键名[必填]
```
<br/>

+ 列举所有配置 : 
``` 
conf -l
```
<br/>

+ (命令行工具的配置为一维数组，存放地址为：cmd/config/config.php)<br/>
### 3、MySql数据库操作指令：
<br/>

+ 检测MySql链接 
``` 
my -g
```
<br/>

+ 执行CURD命令  
``` 
my -x SQL语句[必填]
```
<br/>

+ 注意：在使用my指令之前，应该使用conf指令修改工具配置文件中的数据库配置信息<br/>
+ 注意：my -x指令 暂只支持：select delete update insert 四种SQL语句<br/>
### 4、PHP环境的相关操作指令：
<br/>

+ 打印服务器基本配置 : 
``` 
php -w
```
<br/>

+ 打印服务器已编译模块 : 
``` 
php -c
```
<br/>

+ 打印PHP系统相关参数 : 
``` 
php -l
```
<br/>

+ 打印PHP相关组件扩展 : 
``` 
php -z
```
<br/>

+ 打印数据库相关扩展与配置参数 : 
``` 
php -m
```
<br/>

### 5、目录的相关操作指令：
<br/>

+ 简单的列举目录下的所有文件 
``` 
mk -l 目录路径[可选]  不填的情况下使用配置文件中的根目录
```
<br/>

+ 详细的列举目录下的所有文件 
``` 
mk -ll 目录路径[可选]  不填的情况下使用配置文件中的根目录
```
<br/>

+ 相对于配置文件下，新增目录 
``` 
mk -a 新增目录的路径包含目录名[必填] 0755权限[必填]
```
<br/>

+ 自定义路径下，新增目录 
``` 
mk -a 目标路径[必填] 相对目标路径新增目录的路径包含目录名[必填] 0755权限[必填]
```
<br/>

+ 检测目录是否存在 
``` 
mk -s 检测路径[必填]
```
<br/>

+ 检测目录是否存在，若不存在则创建目录 
``` 
mk -s 检测路径[必填] -y[必填] 0755权限[必填]
```
<br/>

+ 删除目录 
``` 
mk -d 目录路径[必填]
```
<br/>

+ 修改目录名 
``` 
mk -u 原始路径[必填]  目标路径[必填]
```
<br/>


### 6、文件的相关操作指令：
<br/>

+ 删除文件 
``` 
tk -d 文件路径[必填]
```
<br/>

+ 检测文件是否存在 
``` 
tk -s 文件路径[必填]
```
<br/>

+ 修改文件名 
``` 
tk -u 原始文件路径[必填]  目标文件路径[必填]
```
<br/>

+ 复制文件 
``` 
tk -c 原始文件路径[必填]  目标文件路径[必填]
```
<br/>


### 7、Txt和Log文件的相关操作指令：
<br/>

+ 读取内容 
``` 
txt -l 文件路径[必填] 读取函数，最大100[可选]
```
<br/>

+ 替换内容 
``` 
txt -t 文件路径[必填] 原始字符串[必填] 目标字符串[可选]
```
<br/>


### config.php配置文件的一些系统项说明：
<br/>
+ 数据库类型 : DB_TYPE<br/>
+ 数据库地址 : DB_HOST<br/>
+ 数据库名称 : DB_NAME<br/>
+ 数据库账号 : DB_USER<br/>
+ 数据库密码 : DB_PWD<br/>
+ 数据库端口 : DB_PORT<br/>
+ 数据库编码 : DB_CHARSET<br/>
+ 命令行可操作的根目录 : CD_PATH<br/>
