V1.0.0.8/README.md
PHPCMD 命令行插件
===============================================
小黄牛
-----------------------------------------------

### 1731223728@qq.com 


+ 命令行工具当前版本 - V1.0.0.8

+ 上传日期 - 2017-8-10 13:39:00

+ 作者 - 小黄牛

+ 邮箱 - 1731223728@qq.com                                                                                                                    

+ 快捷键：ESC 清空当前界面

+ 快捷键: F1用于恢复ESC清空的界面内容

+ 命令行介绍如下：

+ 本工具是一个可嵌入在后台管理系统中的便捷式开发工具，适用于中小型项目，研发理念为，方便程序员的日常项目维护，正常状态下的程序调试；

+ 本工具可用于商业用途，但不可随意更改作者著作权。


+ 命令行使用说明：

+ 初次使用命令行，系统提供了一个初始用户，账号密码：admin

+ 使用命令行之前，需要先登录工具，进入页面后敲下回车，即可快捷弹出登录指令

+ 每个命令行的提交都是使用【回车键】

+ 命令行每个参数之间，都是用一个空格进行分割，例如登录指令：

``` 
user login|name 账号 密码
```


## 命令行的组成方式：


```
主类 子类 参数1 参数2 参数N 
````


### 1、工具账号操作指令：


+ 注册账号 : 

``` 
user reg 账号[必填] 密码[必填]
```



+ 删除账号 : 

``` 
user del 账号[必填]
```


+ 修改账号 : 

``` 
user upd 账号[必填] 密码[必填]
```


+ 退出工具 : 

``` 
user exit
```


+ 登录工具 : 

``` 
user login|name 账号[必填] 密码[必填]
```



+ 查看所有管理员列表 : 

``` 
user -l
```



+ 查看管理员日志 : 

``` 
user log 管理员账号[可选] 【只有admin可以查看他人日志】
```

+ (命令行工具的用户依赖文件作为存储方式，存放地址为：cmd/config/user/)


### 2、工具配置操作指令：


+ 新增配置 : 

``` 
conf add 键名[必填] 值[必填]
```



+ 修改配置 : 

``` 
conf upd 键名[必填] 值[必填]
```


+ 删除配置 : 

``` 
conf del 键名[必填]
```


+ 查看单个配置 : 

``` 
conf sel 键名[必填]
```


+ 列举所有配置 : 

``` 
conf -l
```


+ (命令行工具的配置为一维数组，存放地址为：cmd/config/config.php)


### 3、MySql数据库操作指令：


+ 检测MySql链接 

``` 
my -g
```


+ 执行CURD命令  

``` 
my -x SQL语句[必填] -回滚标识[可选]
```


+ 数据库分卷备份

``` 
my -b 表名或分卷大小,必须是整数[可选] 分卷大小M,必须是整数[可选]
```


+ 数据库备份恢复(选择v1开头的版本，会自动恢复所有分卷)

``` 
my -i sql文件名，不带文件夹[必填]
```


+ 数据库备份打包与下载

``` 
my -z sql文件名，不带文件夹[必填]  是否需要下载,不为空即可[可选]
```

+ 列举出所有表名

``` 
my -l
```

+ 查看指定单表的详细信息

``` 
my -ll 表名[必填]
```


+ 注意：在使用my指令之前，应该使用conf指令修改工具配置文件中的数据库配置信息

+ 注意：my -x指令 暂只支持：select delete update insert 四种SQL语句



### 4、PHP环境的相关操作指令：


+ 打印服务器基本配置 : 

``` 
php -w
```


+ 打印服务器已编译模块 : 

``` 
php -c
```


+ 打印PHP系统相关参数 : 

``` 
php -l
```


+ 打印PHP相关组件扩展 : 

``` 
php -z
```


+ 打印数据库相关扩展与配置参数 : 

``` 
php -m
```


### 5、目录的相关操作指令：


+ 简单的列举目录下的所有文件 

``` 
mk -l 目录路径[可选]  不填的情况下使用配置文件中的根目录
```


+ 详细的列举目录下的所有文件 

``` 
mk -ll 目录路径[可选]  不填的情况下使用配置文件中的根目录
```


+ 相对于配置文件下，新增目录 

``` 
mk -a 新增目录的路径包含目录名[必填] 0755权限[必填]
```


+ 自定义路径下，新增目录 

``` 
mk -a 目标路径[必填] 相对目标路径新增目录的路径包含目录名[必填] 0755权限[必填]
```


+ 检测目录是否存在 

``` 
mk -s 检测路径[必填]
```


+ 检测目录是否存在，若不存在则创建目录 

``` 
mk -s 检测路径[必填] -y[必填] 0755权限[必填]
```


+ 删除目录 

``` 
mk -d 目录路径[必填]
```


+ 修改目录名 

``` 
mk -u 原始路径[必填]  目标路径[必填]
```



### 6、文件的相关操作指令：


+ 删除文件

``` 
tk -d 文件路径[必填]
```


+ 检测文件是否存在 

``` 
tk -s 文件路径[必填]
```


+ 修改文件名 

``` 
tk -u 原始文件路径[必填]  目标文件路径[必填]
```


+ 复制文件 

``` 
tk -c 原始文件路径[必填]  目标文件路径[必填]
```



### 7、Txt和Log文件的相关操作指令：


+ 读取内容 

``` 
txt -l 文件路径[必填] 读取函数，最大100[可选]
```


+ 替换内容 

``` 
txt -t 文件路径[必填] 原始字符串[必填] 目标字符串[可选]
```



### 8、Mysql回滚的相关操作指令：


+ 释放回滚标识

``` 
back get -回滚标识[必填]
```


+ 删除回滚标识

``` 
back del -回滚标识[必填]
```


+ 列举回滚标识目录

``` 
back -l
```



### 9、文件检测与漏洞扫描指令：


+ 检测与修复BOM头

``` 
loo bom 是否自动修复(随便输入就行)[可选]
```



+  扫描文件代码是否存在安全隐藏

``` 
loo vif false或需要不被扫描的目录，用|符合隔开；当为false时禁用系统默认的绕过目录[可选]

系统默认不扫描目录有：cmd, thinkphp, ThinkPHP, yii, vendor

系统只扫描以下类型的文件内容：.php, .html, .htm, .txt, .log, .json, .arr, .array, .con, .conf, .config

系统只扫描以下PHP系统关键字：

    1、可能会被直接SQL注入的原生变量
		$_get, $_post, $_session, $_cookie 
	
    2、可能会被非法运行代码的系统方法
		system, exec, passthru, shell_exec, popen, proc_open, pcntl_exec, 
	
    3、可能会被非法运行函数的系统方法
		'create_function, call_user_func_array, call_user_func, assert, 
	
    4、可能会被非法覆盖变量提交的系统方法
		'parse_str, mb_parse_str, import_request_variables
```



### config.php配置文件的一些系统项说明：

+ 数据库类型 : DB_TYPE

+ 数据库地址 : DB_HOST

+ 数据库名称 : DB_NAME

+ 数据库账号 : DB_USER

+ 数据库密码 : DB_PWD

+ 数据库端口 : DB_PORT

+ 数据库编码 : DB_CHARSET

+ 命令行可操作的根目录 : CD_PATH
